--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
     </div>
     <div class="map-container">
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1840.255160222957!2d75.80432891150329!3d22.709265965526118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3962ffe24c754c89%3A0xebf65c7711a8aedf!2sDastak%20Public%20School!5e0!3m2!1sen!2sin!4v1646767333769!5m2!1sen!2sin"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6614.033159107254!2d-118.46214667425738!3d34.01778537246089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bb04ed055555%3A0x16f3700753d38cb1!2sMaxnet%20Commercial!5e0!3m2!1sen!2sin!4v1646768318372!5m2!1sen!2sin"
             width="100%" height="600" style="border:1;" allowfullscreen="yes" loading="lazy"></iframe>
     </div>
 
