--- a/tenant.html
+++ b/tenant.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://yahiyamansuri14.github.io/maxnetcommercial/src/css/script.js"></script>
     <link rel="stylesheet" href="https://yahiyamansuri14.github.io/maxnetcommercial/src/css/navbar.css">
     <link rel="stylesheet" href="https://yahiyamansuri14.github.io/maxnetcommercial/src/css/containt.css">
     <link rel="stylesheet" href="https://yahiyamansuri14.github.io/maxnetcommercial/src/css/footer.css">
@@ -16,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.0-10/css/all.css"
         integrity="sha512-Dj9pt3sZROOuTTs9S89ykGZeu1XQgWKg3DVpu5tZALApsrWdd3tnVjTclUuVONaHM4O8GgCnjSbHlTKXrd2OWg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    
     <title>Maxnet Commercial</title>
 </head>
 
@@ -184,21 +185,7 @@
     </div>
 
 
-    <script>
-        function openForm(event, requestName) {
-            var i, tabcontent, tablinks;
-            tabcontent = document.getElementsByClassName("tabcontent");
-            for (i = 0; i < tabcontent.length; i++) {
-                tabcontent[i].style.display = "none";
-            }
-            tablinks = document.getElementsByClassName("request-button");
-            for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].className = tablinks[i].className.replace(" active", "");
-            }
-            document.getElementById(requestName).style.display = "block";
-            event.currentTarget.className += " active";
-        }
-    </script>
+  
 </body>
 
 </html>
