--- a/tenant.html
+++ b/tenant.html
@@ -118,7 +118,7 @@
                 <div class="tenant-forms-container">
                     <span class="tenant-request-text" style="display:block;">ACH Form</span>
                     <a href="https://yahiyamansuri14.github.io/maxnetcommercial/src/document/ach-form.pdf"
-                        donwload="ach-form" class="tenant-request-button">Download
+                        download="ach-form" class="tenant-request-button">Download
                         Form</a>
                 </div>
 
