--- a/property-mgmt.html
+++ b/property-mgmt.html
@@ -84,7 +84,7 @@
             </br>
             <span class="footer-subheading">Property Development and Management</span>
             <br><br>
-            <address>
+            <address style="color:white;">
                 Los Angeles Office
                 Maxnet Commercial3435 Ocean Park Blvd, Suite 107-502
                 Santa Monica CA 90405
@@ -119,12 +119,12 @@
             <a href="https://yahiyamansuri14.github.io/maxnetcommercial/tenant.html"><span
                     style="font-size: 20px;color: white;">Tenant Request</span></a>
             <br><br>
-            <span style="font-size: 20px;">Call Us </span>
+            <span style="font-size: 20px;color: white;">Call Us </span>
             <br>
             <span style="font-size: 16px;color: white;">(888) 260-8106</span>
             <br>
             <br>
-            <span style="font-size: 20px;">Email Us</span>
+            <span style="font-size: 20px;color: white;">Email Us</span>
             <br>
             <span style="font-size: 16px;color: white;">info@maxnetcommercial.com</span>
             <br>
