--- a/contact.html
+++ b/contact.html
@@ -101,13 +101,13 @@
             width="100%" height="600" style="border:1;" allowfullscreen="yes" loading="lazy"></iframe>
     </div>
 
-    <footer class="footer-container">
+     <footer class="footer-container">
         <div class="footer-left-container">
             <span class="footer-heading">MAXNET Commercial</span>
             </br>
             <span class="footer-subheading">Property Development and Management</span>
             <br><br>
-            <address>
+            <address style="color:white;">
                 Los Angeles Office
                 Maxnet Commercial3435 Ocean Park Blvd, Suite 107-502
                 Santa Monica CA 90405
@@ -142,12 +142,12 @@
             <a href="https://yahiyamansuri14.github.io/maxnetcommercial/tenant.html"><span
                     style="font-size: 20px;color: white;">Tenant Request</span></a>
             <br><br>
-            <span style="font-size: 20px;">Call Us </span>
+            <span style="font-size: 20px;color: white;">Call Us </span>
             <br>
             <span style="font-size: 16px;color: white;">(888) 260-8106</span>
             <br>
             <br>
-            <span style="font-size: 20px;">Email Us</span>
+            <span style="font-size: 20px;color: white;">Email Us</span>
             <br>
             <span style="font-size: 16px;color: white;">info@maxnetcommercial.com</span>
             <br>
