--- a/tenant.html
+++ b/tenant.html
@@ -60,7 +60,7 @@
         </div>
         <div class="various-form-container">
             <div class="tabcontent" id="maintainance">
-                <span class="heading" style="text-align: center;display:block;color: #ffb400;">Maintainance
+                <span class="heading" style="text-align: center;display:block;color: #103B1D;">Maintainance
                     Request Form</span>
                 <form class="contact-form">
                     <div class="form-field-container">
@@ -99,7 +99,7 @@
             </div>
 
             <div class="tabcontent" id="tenant">
-                <span class="heading" style="text-align: center;display:block;color: #ffb400;">Tenant
+                <span class="heading" style="text-align: center;display:block;color: #103B1D;">Tenant
                     Form</span>
                 <span class="tenant-request-text">Kindly download New Tanent Request Form from given link and send us at
                     info@maxnetcommercial.com</span>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="tabcontent" id="ACH">
-                <span class="heading" style="text-align: center;display:block;color: #ffb400;">ACH
+                <span class="heading" style="text-align: center;display:block;color: #103B1D;">ACH
                     Form</span>
                 <span class="tenant-request-text">Kindly download ACH Form from given link and send us at
                     info@maxnetcommercial.com</span>
