--- a/tenant.html
+++ b/tenant.html
@@ -51,6 +51,9 @@
             alt="Property Management Hero Image" class="center-image" />
     </div>
     <div class="tenant-container">
+        <p class="tenant-info-text" style="color:#103B1D;text-align:center;font-size:16px;">Please fill the mainteinance form attached and we will get back to you within next 24hours
+        <br>For emergency maintenance requests please call 888 260 8106 and we will get back to you in a timely manner.
+        </p>
         <div class="request-parent-container">
             <ul class="request-button-container">
                 <li class="request-button active" onclick="openForm(event, 'maintainance')">Maintainance Request</li>
