--- a/tenant.html
+++ b/tenant.html
@@ -50,7 +50,7 @@
         <img src="https://yahiyamansuri14.github.io/maxnetcommercial/src/img/tenant-request.png"
             alt="Property Management Hero Image" class="center-image" />
     </div>
-    <p class="tenant-info-text" style="color:#103B1D;text-align:center;font-size:16px;">Please fill the mainteinance form attached and we will get back to you within next 24hours
+    <p class="tenant-info-text" style="color:#103B1D;text-align:center;font-size:16px;padding: 10px;">Please fill the mainteinance form attached and we will get back to you within next 24hours
         <br>For emergency maintenance requests please call 888 260 8106 and we will get back to you in a timely manner.
         </p>
     <div class="tenant-container">
