--- a/contact.html
+++ b/contact.html
@@ -87,11 +87,11 @@
                 <span style="font-size: 16px;">info@maxnetcommercial.com</span>
                 <br><br>
                 <span style="font-size: 25px;">Address</span>
-                <address>
-                    Los Angeles Office
-                    Maxnet Commercial3435 Ocean Park Blvd, Suite 107-502
-                    Santa Monica CA 90405
-                </address>
+                <p>
+                Los Angeles Office<br>
+                3435 Ocean Park Blvd, Suite 107-502<br>
+                Santa Monica CA 90405
+            </p>
             </div>
         </div>
     </div>
@@ -107,11 +107,11 @@
             </br>
             <span class="footer-subheading">Property Development and Management</span>
             <br><br>
-            <address style="color:white;">
-                Los Angeles Office
-                Maxnet Commercial3435 Ocean Park Blvd, Suite 107-502
+            <p style="color:white;">
+                Los Angeles Office<br>
+                3435 Ocean Park Blvd, Suite 107-502<br>
                 Santa Monica CA 90405
-            </address>
+            </p>
         </div>
         <div class="footer-center-container">
             <ul class="footer-menu">
