--- a/property-mgmt.html
+++ b/property-mgmt.html
@@ -84,11 +84,11 @@
             </br>
             <span class="footer-subheading">Property Development and Management</span>
             <br><br>
-            <address style="color:white;">
-                Los Angeles Office
-                Maxnet Commercial3435 Ocean Park Blvd, Suite 107-502
+            <p style="color:white;">
+                Los Angeles Office<br>
+                3435 Ocean Park Blvd, Suite 107-502<br>
                 Santa Monica CA 90405
-            </address>
+            </p>
         </div>
         <div class="footer-center-container">
             <ul class="footer-menu">
